agregado un txt. modificado el index.html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 </head>
 <body>
 
+
+<!-- código agregado por j -->
+<div class="container" style="text-align:center">
+<h1 style= "color:red; padding:3em">holiiis</h1>
+</div>
+
 </body>
 <script src="tablas.js"></script>
 </html>
